Fix page banner alignment: make logo display:block so eyebrow stacks below it

--- a/css/main.css
+++ b/css/main.css
@@ -338,6 +338,9 @@ nav::after {
 }
 
 .page-banner-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: min(280px, 60vw);
   height: auto;
   margin-bottom: 2rem;
